// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  .cache-1cgay5i {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-ne18sh-Tag {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-1cgay5i"
  >
    <span
      aria-disabled="false"
      class="cache-ne18sh-Tag e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly bordered 1`] = `
<DocumentFragment>
  .cache-p59kms {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.cache-ne18sh-Tag {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-p59kms"
  >
    <span
      aria-disabled="false"
      class="cache-ne18sh-Tag e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-4058ae {
  opacity: 0.5;
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1j3q0fd-Tag {
  opacity: 0.5;
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-4058ae"
  >
    <span
      aria-disabled="true"
      class="cache-1j3q0fd-Tag e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;
